# Babel

./: CMakeLists.txt  QUdpSocket.pro  conanfile.txt
GlobalClasses/Exceptions/: Exceptions.cpp  Exceptions.hpp
GlobalClasses/Request/: Request.cpp  Request.hpp
GlobalClasses/Serializer/: Serializer.cpp  Serializer.hpp
GlobalClasses/include/: header.hpp
client/: CMakeLists.txt  QUdpSocket.pro  main.cpp
client/assets/: QTres.qrc
client/sources/ClientClientCommunication/: DecodeSound.cpp  DecodeSound.hpp  EncodeSound.cpp  EncodeSound.hpp  Eventcall.cpp  Eventcall.hpp  UDPclient.cpp  UDPclient.hpp  Voice.cpp  Voice.hpp
client/sources/ClientServerCommunication/: TCPclient.cpp  TCPclient.hpp
client/sources/Core/: Core.cpp  Core.hpp
client/sources/GraphicalUserInterface/ComboBox/: ComboBox.cpp  ComboBox.hpp
client/sources/GraphicalUserInterface/Label/: Label.cpp  Label.hpp
client/sources/GraphicalUserInterface/LineEdit/: LineEdit.cpp  LineEdit.hpp
client/sources/GraphicalUserInterface/List/: List.cpp  List.hpp
client/sources/GraphicalUserInterface/PushButton/: PushButton.cpp  PushButton.hpp
client/sources/GraphicalUserInterface/Window/: Window.cpp  Window.hpp
server/: CMakeLists.txt  main.cpp
server/classes/Database/: Database.cpp  Database.hpp
server/classes/Server/: Server.cpp  Server.hpp
server/classes/Session/: Session.cpp  Session.hpp
tests/: CMakeLists.txt  unit_header.hpp  unit_main.cpp
